; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_sshlogin.c_get_last_login_time.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_sshlogin.c_get_last_login_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.logininfo = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_last_login_time(i32 %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.logininfo, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @login_get_lastlog(%struct.logininfo* %9, i32 %10)
  %12 = load i8*, i8** %7, align 8
  %13 = getelementptr inbounds %struct.logininfo, %struct.logininfo* %9, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @strlcpy(i8* %12, i32 %14, i64 %15)
  %17 = getelementptr inbounds %struct.logininfo, %struct.logininfo* %9, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  ret i32 %18
}

declare dso_local i32 @login_get_lastlog(%struct.logininfo*, i32) #1

declare dso_local i32 @strlcpy(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
